Update GitHub Pages site link

--- a/www/links.html
+++ b/www/links.html
@@ -186,7 +186,7 @@ Telegram: rtmps://xxx-x.rtmp.t.me/s/xxxxxxxxxx:xxxxxxxxxxxxxxxxxxxxxx</pre>
             document.getElementById('local').href = `webrtc.html?${direction}=${src}&media=${media}`;
 
             const share = document.getElementById('shareget');
-            share.href = `https://alexxit.github.io/go2rtc/#${share.dataset.auth}&media=${media}`;
+            share.href = `https://go2rtc.org/webtorrent/#${share.dataset.auth}&media=${media}`;
         }
 
         function share(method) {
