Move all JS libs to cdn.jsdelivr.net

--- a/www/links.html
+++ b/www/links.html
@@ -87,7 +87,7 @@
             if (data.setup_code === undefined) return;
 
             const script = document.createElement('script');
-            script.src = 'https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js';
+            script.src = 'https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js';
             script.async = true;
             script.onload = () => {
                 /* global BigInt */
