style: update button colors to use CSS variables for improved theming

--- a/www/add.html
+++ b/www/add.html
@@ -6,8 +6,8 @@
     <title>add - go2rtc</title>
     <style>
         main > button {
-            background-color: #444;
-            color: white;
+            background-color: var(--bg-secondary);
+            color: var(--text-secondary);
             cursor: pointer;
             padding: 14px;
             width: 100%;
