feat(ui): add info and probe pages for detailed stream analysis

--- a/www/index.html
+++ b/www/index.html
@@ -854,9 +854,9 @@
                             ${online > 0 ? `<span>${online} viewer${online !== 1 ? 's' : ''}</span>` : '<span>offline</span>'}
                         </div>
                         <span class="link-separator">/</span>
-                        <a href="api/streams?src=${src}">info</a>
+                        <a href="info.html?src=${src}">info</a>
                         <span class="link-separator">/</span>
-                        <a href="api/streams?src=${src}&video=all&audio=all&microphone">probe</a>
+                        <a href="probe.html?src=${src}">probe</a>
                         <span class="link-separator">/</span>
                         <a href="net.html?src=${src}">network</a>
                     </td>` +
