--- a/www/probe.html
+++ b/www/probe.html
@@ -7,220 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Orbitron:wght@700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <style>
-        :root {
-            --bg-primary: #0a0e14;
-            --bg-secondary: #151b24;
-            --bg-card: #1a2332;
-            --border-color: #2a3544;
-            --text-primary: #e6edf3;
-            --text-secondary: #8b949e;
-            --text-muted: #6e7681;
-            --accent-cyan: #00d9ff;
-            --accent-electric: #00ffff;
-            --accent-red: #ff4757;
-            --accent-green: #2ecc71;
-            --accent-yellow: #ffd93d;
-            --glow-cyan: 0 0 20px rgba(0, 217, 255, 0.3);
-            --glow-red: 0 0 20px rgba(255, 71, 87, 0.3);
-            --glow-green: 0 0 20px rgba(46, 204, 113, 0.3);
-        }
-
-        [data-theme="light"] {
-            --bg-primary: #f5f7fa;
-            --bg-secondary: #ffffff;
-            --bg-card: #ffffff;
-            --border-color: #e1e4e8;
-            --text-primary: #24292e;
-            --text-secondary: #586069;
-            --text-muted: #6a737d;
-            --accent-cyan: #0366d6;
-            --accent-electric: #005cc5;
-            --accent-red: #d73a49;
-            --accent-green: #28a745;
-            --accent-yellow: #ffd33d;
-            --glow-cyan: 0 0 10px rgba(3, 102, 214, 0.2);
-            --glow-red: 0 0 10px rgba(215, 58, 73, 0.2);
-            --glow-green: 0 0 10px rgba(40, 167, 69, 0.2);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            background: var(--bg-primary);
-            color: var(--text-primary);
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 14px;
-            line-height: 1.6;
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: repeating-linear-gradient(
-                0deg,
-                rgba(0, 0, 0, 0.05) 0px,
-                rgba(0, 0, 0, 0.05) 1px,
-                transparent 1px,
-                transparent 2px
-            );
-            pointer-events: none;
-            z-index: 9999;
-            opacity: 0.3;
-        }
-
-        body::after {
-            content: '';
-            position: fixed;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(
-                circle at 50% 50%,
-                rgba(0, 217, 255, 0.03) 0%,
-                transparent 50%
-            );
-            animation: rotateGradient 20s linear infinite;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        @keyframes rotateGradient {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 24px;
-            position: relative;
-            z-index: 1;
-        }
-
-        header {
-            background: var(--bg-secondary);
-            border-bottom: 2px solid var(--accent-cyan);
-            box-shadow: var(--glow-cyan);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            backdrop-filter: blur(10px);
-        }
-
-        nav {
-            display: flex;
-            align-items: center;
-            gap: 32px;
-            padding: 20px 0;
-        }
-
-        .logo {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            font-size: 28px;
-            color: var(--accent-cyan);
-            text-shadow: var(--glow-cyan);
-            letter-spacing: 2px;
-            text-decoration: none;
-            position: relative;
-            animation: glitch 3s infinite;
-        }
-
-        @keyframes glitch {
-            0%, 90%, 100% { transform: translate(0); }
-            91% { transform: translate(-2px, 1px); }
-            92% { transform: translate(2px, -1px); }
-            93% { transform: translate(-1px, 2px); }
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 24px;
-            align-items: center;
-            flex: 1;
-        }
-
-        .nav-link {
-            color: var(--text-secondary);
-            text-decoration: none;
-            font-weight: 500;
-            text-transform: uppercase;
-            font-size: 12px;
-            letter-spacing: 1px;
-            padding: 8px 16px;
-            border: 1px solid transparent;
-            border-radius: 4px;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .nav-link::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, var(--accent-cyan), transparent);
-        }
-
-        .nav-link:hover::before {
-            left: 100%;
-        }
-
-        .nav-link:hover,
-        .nav-link.active {
-            color: var(--accent-cyan);
-            border-color: var(--accent-cyan);
-            box-shadow: var(--glow-cyan);
-        }
-
-        .docs-link {
-            font-size: 11px;
-            padding: 4px 10px;
-            opacity: 0.6;
-            margin-left: auto;
-        }
-
-        .docs-link:hover {
-            opacity: 1;
-        }
-
-        .theme-toggle {
-            width: 48px;
-            height: 48px;
-            border: none;
-            border-radius: 6px;
-            background: var(--bg-card);
-            color: var(--accent-cyan);
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            margin-left: auto;
-        }
-
-        .theme-toggle:hover {
-            background: var(--accent-cyan);
-            color: var(--bg-primary);
-        }
-
-        main {
-            padding: 40px 0;
-        }
+        /* Page-specific styles for probe.html */
 
         .page-header {
             margin-bottom: 32px;
@@ -366,49 +155,6 @@
         }
 
         @media (max-width: 768px) {
-            nav {
-                gap: 16px;
-                padding: 12px 0;
-                flex-wrap: wrap;
-            }
-
-            .logo {
-                font-size: 20px;
-                flex-shrink: 0;
-            }
-
-            .nav-links {
-                order: 3;
-                flex: 1 1 100%;
-                gap: 8px;
-                overflow-x: auto;
-                overflow-y: hidden;
-                -webkit-overflow-scrolling: touch;
-                scrollbar-width: none;
-                padding-bottom: 4px;
-            }
-
-            .nav-links::-webkit-scrollbar {
-                display: none;
-            }
-
-            .nav-link {
-                flex-shrink: 0;
-                font-size: 11px;
-                padding: 6px 12px;
-            }
-
-            .docs-link {
-                order: 2;
-                margin-left: auto;
-                flex-shrink: 0;
-            }
-
-            .theme-toggle {
-                order: 1;
-                flex-shrink: 0;
-            }
-
             .page-title {
                 font-size: 24px;
             }
