--- a/www/links.html
+++ b/www/links.html
@@ -268,6 +268,8 @@
 
 <main>
     <div class="container">
+        <a href="index.html" class="back-link">← Back to Streams</a>
+        
         <div class="page-header">
             <h1 class="page-title">Stream Links</h1>
             <div class="stream-name">Stream: <span id="stream-name"></span></div>
