fix(index.html): replace hash symbol with block character in graph  - change the character used for bars from '#' to '█' for better visual representation

--- a/www/index.html
+++ b/www/index.html
@@ -188,7 +188,7 @@
         for (let row = graphHeight; row >= 1; row--) {
             let line = '|';
             for (const bar of bars) {
-                line += bar >= row ? '#' : ' ';
+                line += bar >= row ? '█' : ' ';
             }
             line += '|';
             lines.push(line);
